# buildspec

./: .coverage  .gitignore  LICENSE  Makefile  PORTABILITY.md  README.md  RESTRUCTURE_SUMMARY.md  buildspec.spec  pyproject.toml
.epics/apply-review-feedback/: TICKETS_CREATED.md  apply-review-feedback.epic.yaml
.epics/apply-review-feedback-cd03172/: apply-review-feedback-spec.md
.epics/apply-review-feedback-cd03172/artifacts/: epic-file-review.md  epic-review.md  epic-state.json
.epics/apply-review-feedback-cd03172/tickets/: ARF-001.md  ARF-003.md  ARF-006.md  ARF-009.md  ARF-010.md
.epics/apply-review-feedback/artifacts/: epic-state.json  test-results.md
.epics/apply-review-feedback/tickets/: ARF-002.md  ARF-004.md  ARF-005.md  ARF-007.md  ARF-008.md
.epics/code-review-integration/: code-review-integration-spec.md
.epics/comprehensive-testing/: comprehensive-testing-spec.md  comprehensive-testing.epic.yaml
.epics/epic-file-prompts/: agent-implementation-verification.md  epic-file-prompts.md  epic-yaml-schema.md  multi-turn-agent-architecture.md  requirement-transformation-rules.md
.epics/epic-splitting/: epic-splitting-spec.md  epic-splitting.epic.yaml
.epics/epic-splitting/artifacts/: epic-state.json
.epics/epic-splitting/tickets/: add-ticket-count-field.md  archive-original-epic.md  create-epic-split-workflow.md  epic-validator-module.md  integration-testing.md  prompts-build-split-epic.md  split-edge-case-handling.md  split-epic-specialist-command.md  split-result-display.md  subdirectory-creation-logic.md
.epics/git-strategy/: git-strategy-spec.md
.epics/orchestrator-coordination/: orchestrator-coordination-spec.md  orchestrator-coordination.epic.yaml
.epics/orchestrator-coordination/artifacts/: epic-state.json
.epics/progress-ui/: progress-ui-spec.md  progress-ui.epic.md  progress-ui.epic.yaml
.epics/state-machine/: state-machine-spec.md  state-machine.epic.yaml
.epics/state-machine-retry/: state-machine-retry-spec.md
agents/: create-epic-v2.md
claude_files/agents/: create-epic-v2.md  create-epic.md  epic-generator.md  epic-review.json
claude_files/commands/: create-epic.md  create-epic.md.bak  create-tickets.md  epic-file-review.md  epic-review.md  execute-epic.md  execute-epic.md.bak  execute-ticket.md  split-epic.md  tickets-review.md
claude_files/hooks/: validate-epic-creation.sh
claude_files/mcp-servers/: epic-validator.py
claude_files/scripts/: epic-paths.sh
claude_files/standards/: test-standards.md  ticket-standards.md
cli/: __init__.py  __main__.py  app.py
cli/commands/: create_epic.py  create_tickets.py  execute_epic.py  execute_ticket.py  init.py
cli/core/: __init__.py  claude.py  config.py  context.py  prompts.py  validation.py
cli/epic/: __init__.py  claude_builder.py  gates.py  git_operations.py  models.py  state_machine.py  test_gates.py
cli/utils/: __init__.py  agent_loader.py  commit_parser.py  epic_validator.py  path_resolver.py  review_feedback.py
commands/: create-epic.md  create-tickets.md
docs/: CLI_BLUEPRINT.md  DISTRIBUTION.md  PORTABILITY.md  ROADMAP.md  TESTING_SUMMARY.md  TEST_CHECKLIST.md  TEST_RESULTS.md
hooks/: validate-epic-creation.sh
mcp-servers/: epic-validator.py
scripts/: install.sh  uninstall.sh  validate-epic.sh
test-artifacts/planning/: sample-feature-spec.md
tests/integration/: test_orchestrator.py  test_review_feedback_integration.py
(+95 files in other folders)
