[project]
name = "buildspec-cli"
version = "0.1.0"
description = "Headless CLI for buildspec workflows"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0 ; python_full_version < '3.11'",
]

[project.scripts]
buildspec = "cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
